
- shutdown-wrapper is a wrapper which tests the shutdown-hooks
  set its SUID bit if needed

2012-02-23: Version 0.0.3j

- add "Now" and "Next" to EPG interface

2012-03-07: Version 0.0.3k

- add "DisableScanner" and "EnableScanner" to EPG interface

2012-03-08: Version 0.0.4

- add OSD interface

2012-03-10: Version 0.0.4a

- add "CreateProvider" and "DeleteProvider" to OSD interface

2012-03-11: Version 0.0.4b

- adapt to vdr 1.7.26 and add missing symbol

2012-04-04: Version 0.0.4c

- accept multiple keys with "HitKey"

2012-04-12: Version 0.0.4d

- add "At" to EPG interface

2012-04-19: Version 0.0.5
- add "CurrentSkin" and "ListSkins" to Skin interface

2012-04-26: Version 0.0.6
- send upstart signals for every plugin on startup and stopping

2012-04-26: Version 0.0.6a
- use a DBus method call for Upstart, not a DBus signal

2012-04-28: Version 0.0.6b
- emit only one Upstart event for all plugins

2012-05-02: Version 0.0.6c
- emit Upstart signal only if activated and send a SIGSTOP

2012-05-13: Version 0.0.6d
- if dbus disconnects try to reconnect to system bus

2012-05-15: Version 0.0.6e
- add support for getting/setting plugin parameters in the setup.conf

2012-05-23: Version 0.0.6f
- correct parameter parsing of epg.PutEntry and remote.AskUser

2012-05-23: Version 0.0.6g
- add "Del" to setup interface

2012-05-23: Version 0.0.7
- output all plugin settings with setup.List
- delete all plugin settings with "Del plugin.*"

2012-06-06: Version 0.0.7a
- extend "ConfirmShutdown" with an "ignore user" parameter

2012-06-14: Version 0.0.7b
- refactor connection handling
- waiting for "NameAcquired" before sending signals

2012-06-20: Version 0.0.7c
- call dbus_threads_init_default, since connection shall be used by multiple threads

2012-06-27: Version 0.0.7d
- add NextWakeupTime to Setup interface
- add ManualStart to Shutdown interface

2012-07-04: Version 0.0.7e
- fix value range test in setup.Set for int32
- add support for all values from setup.conf